pkg/lsp/testdata/ub/diagnostics/valid/go-field-typo.ub
factory: {
  imports: { def: 'example.com/definition' }
  resources: {
    server: def.server { unknown-field: 'x' }
  }
}
