pkg/lsp/testdata/ub/diagnostics/invalid/missing-remote.ub
factory: {
  imports: { ext: 'example.com/missing' }
  resources: {
    server: ext.server {}
  }
}
